--- a/REC-PAD-2021_1 Cogumelos.ipynb
+++ b/REC-PAD-2021_1 Cogumelos.ipynb
@@ -369,355 +369,290 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66f0474a",
+   "id": "2c8acdd2",
    "metadata": {},
    "source": [
-    "# Utilização do k-NN"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4166be29",
-   "metadata": {},
-   "source": [
-    "##### Sem PCA"
+    "# Projeto\n",
+    "##### A seguir é feita uma seleção aleátoria dos dados para cada algorítmo com KFold e em seguida o treinamento e avaliação de cada método. A ordem será a estimação dos parâmetros de (kNN, SVM, MLP), e para cada estimação é selecionada avaliação do melhor parâmetro para cada algorítmo. Para o KNN o melhor numero de visinhos dentre [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15], para o SVM o melhor kernel dentre [\"linear\", \"poly\", \"rbf\", \"sigmoid\"], e por fim para a rede neural a melhor função de ativação [\"identity\", \"logistic\", \"tanh\", \"relu\"] respectivamente.\n",
+    "### 1. kNN"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eff94c39",
+   "id": "a3243cc2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = mushroom\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import KFold\n",
     "\n",
-    "i_sort = np.random.randint(len(X) - 1) # Selecionando aleatóriamente um index de teste\n",
     "\n",
-    "X_teste = X.iloc[i_sort] \n",
-    "X = X.drop(i_sort)\n",
-    "\n",
-    "y_teste = y.iloc[i_sort]\n",
-    "y = y.drop(i_sort)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60f82481",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "X_treino, X_teste, y_treino, y_teste = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "\n",
-    "knn.fit(X, y)\n",
+    "valores_k = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]\n",
+    "resultados_knn = []\n",
     "\n",
-    "predict = knn.predict(np.array(X_teste).reshape(1,-1))\n",
+    "for k in valores_k:\n",
+    "    resultados_k = []\n",
+    "    knn = KNeighborsClassifier(n_neighbors=k)\n",
+    "    kf = KFold(n_splits=10, shuffle=True)\n",
+    "    for index_train, index_valid in kf.split(X_treino):\n",
+    "        X_train, X_validacao = X_treino.iloc[index_train], X_treino.iloc[index_valid]\n",
+    "        y_train, y_validacao = y_treino.iloc[index_train], y_treino.iloc[index_valid]\n",
+    "        knn.fit(X_train, y_train)\n",
+    "        resultados_k.append(knn.score(X_validacao, y_validacao))\n",
+    "    resultados_knn.append(sum(resultados_k)/len(resultados_k))\n",
+    "# resultados_knn\n",
     "\n",
-    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+    "big_value = np.max(resultados_knn)\n",
+    "\n",
+    "mapped_values = dict(zip(valores_k, resultados_knn))\n",
+    "\n",
+    "better_knn = 0\n",
+    "\n",
+    "for m in mapped_values:\n",
+    "    if mapped_values[m] == big_value:\n",
+    "        better_knn = m\n",
+    "        break\n",
+    "\n",
+    "print(dict(zip([\"O melhor Knn atual\", \"Maior valor\"], [better_knn, big_value])))\n",
+    "\n",
+    "mapped_values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1453ef8",
+   "metadata": {},
+   "source": [
+    "##### O melhor k escolhido é agora usado  na classificação real do Knn"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "050490e2",
+   "id": "52509718",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dist, vizinhos = knn.kneighbors(np.array(X_teste).reshape(1,-1))\n",
-    "classes = []\n",
-    "for v in vizinhos:\n",
-    "    classes.append(dataset.iloc[:-1, limiar][v])\n",
-    "classes"
+    "# Desempenho real do Knn\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=better_knn)\n",
+    "knn.fit(X_treino, y_treino)\n",
+    "knn_score = knn.score(X_teste, y_teste)\n",
+    "knn_score"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ae6bad24",
+   "id": "2417fcab",
    "metadata": {},
    "source": [
-    "# Utilização do Naive Bayes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "80df16e1",
-   "metadata": {},
-   "source": [
-    "##### Sem PCA"
+    "##### Avaliação por Precisão, Recall e F1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1c777dd",
+   "id": "a30fbdeb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "y_pred = knn.predict(X_teste)\n",
     "\n",
-    "gnb = GaussianNB()\n",
-    "gnb.fit(X, y)\n",
-    "predict = gnb.predict(np.array(X_teste).reshape(1,-1))\n",
+    "score_p = precision_score(y_teste, y_pred, average='macro')\n",
+    "score_r = recall_score(y_teste, y_pred, average='macro')\n",
+    "score_f1 = f1_score(y_teste, y_pred, average='macro')\n",
     "\n",
-    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+    "pd.DataFrame([score_p, score_r, score_f1], index = [\"Precision\", \"Recall\", \"F1\"], columns=[\"Scores\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "639fa6e1",
+   "metadata": {},
+   "source": [
+    "### 2. SVM"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e826c9d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sklearn.naive_bayes import MultinomialNB\n",
-    "\n",
-    "# mnb = MultinomialNB()\n",
-    "# mnb.fit(X, y)\n",
-    "# predict = mnb.predict(np.array(X_teste).reshape(1,-1))\n",
-    "\n",
-    "# print({\"Previsto:\": predict, \"Correto:\": y_teste})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "384440a3",
-   "metadata": {},
-   "source": [
-    "# Utilização do SVM"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "75662375",
-   "metadata": {},
-   "source": [
-    "##### RBF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc0e9f9f",
+   "id": "18d135ab",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC\n",
+    "valores_kernel = [\"linear\", \"poly\", \"rbf\", \"sigmoid\"]\n",
+    "resultados_svm = []\n",
     "\n",
-    "svc = SVC(kernel='rbf')\n",
-    "svc.fit(X, y)\n",
-    "predict = svc.predict(np.array(X_teste).reshape(1,-1))\n",
+    "for kernel in valores_kernel:\n",
+    "    resultados_kernel = []\n",
+    "    svc = SVC(kernel=kernel)\n",
+    "    kf = KFold(n_splits=10, shuffle=True)\n",
+    "    for index_train, index_valid in kf.split(X_treino):\n",
+    "        X_train, X_validacao = X_treino.iloc[index_train], X_treino.iloc[index_valid]\n",
+    "        y_train, y_validacao = y_treino.iloc[index_train], y_treino.iloc[index_valid]\n",
+    "        svc.fit(X_train, y_train)\n",
+    "        resultados_kernel.append(svc.score(X_validacao, y_validacao))\n",
+    "    resultados_svm.append(sum(resultados_kernel)/len(resultados_kernel))\n",
     "\n",
-    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+    "\n",
+    "big_value = np.max(resultados_svm)\n",
+    "\n",
+    "mapped_values = dict(zip(valores_kernel, resultados_svm))\n",
+    "\n",
+    "better_k = \"\"\n",
+    "\n",
+    "for m in mapped_values:\n",
+    "    if mapped_values[m] == big_value:\n",
+    "        better_k = m\n",
+    "        break\n",
+    "\n",
+    "print(dict(zip([\"O melhor Kernel atual\", \"Maior valor\"], [better_k, big_value])))\n",
+    "\n",
+    "mapped_values"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "01759831",
+   "id": "9ff5c7bb",
    "metadata": {},
    "source": [
-    "##### Linear"
+    "##### O melhor Kernel escolhido é usado na classificação real do SVM"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c799f78",
+   "id": "5a31d7cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "svc = SVC(kernel='linear')\n",
-    "svc.fit(X, y)\n",
-    "predict = svc.predict(np.array(X_teste).reshape(1,-1))\n",
-    "\n",
-    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+    "svc = SVC(kernel=better_k)\n",
+    "svc.fit(X_treino, y_treino)\n",
+    "svc_score = svc.score(X_teste, y_teste)\n",
+    "svc_score"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "53192d0c",
+   "id": "5075266a",
    "metadata": {},
    "source": [
-    "##### Polinomial"
+    "##### Avaliação por Precisão, Recall e F1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dadb925b",
+   "id": "4f93be8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "svc = SVC(kernel='poly')\n",
-    "svc.fit(X, y)\n",
-    "predict = svc.predict(np.array(X_teste).reshape(1,-1))\n",
+    "y_pred = svc.predict(X_teste)\n",
     "\n",
-    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+    "score_p = precision_score(y_teste, y_pred, average='macro')\n",
+    "score_r = recall_score(y_teste, y_pred, average='macro')\n",
+    "score_f1 = f1_score(y_teste, y_pred, average='macro')\n",
+    "\n",
+    "pd.DataFrame([score_p, score_r, score_f1], index = [\"Precision\", \"Recall\", \"F1\"], columns=[\"Scores\"])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8e5a20eb",
+   "id": "a412e091",
    "metadata": {},
    "source": [
-    "##### Sigmoid"
+    "### 3. MLP"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8261582d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "svc = SVC(kernel='sigmoid')\n",
-    "svc.fit(X, y)\n",
-    "predict = svc.predict(np.array(X_teste).reshape(1,-1))\n",
-    "\n",
-    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3bd8e524",
-   "metadata": {},
-   "source": [
-    "# Arvores de decisão"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25fc14ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "\n",
-    "arvore = DecisionTreeClassifier(criterion=\"entropy\")\n",
-    "arvore.fit(X, y)\n",
-    "predict = arvore.predict(np.array(X_teste).reshape(1,-1))\n",
-    "\n",
-    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57708a2e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sklearn.tree import export_text\n",
-    "# tree_rules = export_text(arvore, feature_names=list(X.columns))\n",
-    "# print(tree_rules)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e4e7b707",
-   "metadata": {},
-   "source": [
-    "# Redes Neurais"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4f0aba99",
-   "metadata": {},
-   "source": [
-    "##### Identity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1c81033",
+   "id": "e9e4811c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neural_network import MLPClassifier\n",
+    "valores_ativacao = [\"identity\", \"logistic\", \"tanh\", \"relu\"]\n",
+    "resultados_mlp = []\n",
     "\n",
-    "mlp = MLPClassifier(activation=\"identity\")\n",
-    "mlp.fit(X, y)\n",
-    "predict = mlp.predict(np.array(X_teste).reshape(1,-1))\n",
+    "for ativacao in valores_ativacao:\n",
+    "    resultados_ativacao = []\n",
+    "    mlp = MLPClassifier(activation=ativacao)\n",
+    "    kf = KFold(n_splits=10, shuffle=True)\n",
+    "    for index_train, index_valid in kf.split(X_treino):\n",
+    "        X_train, X_validacao = X_treino.iloc[index_train], X_treino.iloc[index_valid]\n",
+    "        y_train, y_validacao = y_treino.iloc[index_train], y_treino.iloc[index_valid]\n",
+    "        mlp.fit(X_train, y_train)\n",
+    "        resultados_ativacao.append(svc.score(X_validacao, y_validacao))\n",
+    "    resultados_mlp.append(sum(resultados_ativacao)/len(resultados_ativacao))\n",
     "\n",
-    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+    "\n",
+    "\n",
+    "big_value = np.max(resultados_mlp)\n",
+    "\n",
+    "mapped_values = dict(zip(valores_ativacao, resultados_mlp))\n",
+    "\n",
+    "better_a = \"\"\n",
+    "\n",
+    "for m in mapped_values:\n",
+    "    if mapped_values[m] == big_value:\n",
+    "        better_a = m\n",
+    "        break\n",
+    "\n",
+    "print(dict(zip([\"O melhor parametro de ativação atual\", \"Maior valor\"], [better_a, big_value])))\n",
+    "mapped_values"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bd0da2af",
+   "id": "88765052",
    "metadata": {},
    "source": [
-    "##### Sigmoide | Logistica"
+    "##### O melhor Valor de ativação escolhido é usado na classificação real do MLP"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3783a6ae",
+   "id": "0b19a0b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neural_network import MLPClassifier\n",
-    "\n",
-    "mlp = MLPClassifier(activation=\"logistic\")\n",
-    "mlp.fit(X, y)\n",
-    "predict = mlp.predict(np.array(X_teste).reshape(1,-1))\n",
-    "\n",
-    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+    "mlp = MLPClassifier(activation=better_a)\n",
+    "mlp.fit(X_treino, y_treino)\n",
+    "mlp_score = mlp.score(X_teste, y_teste)\n",
+    "mlp_score"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "282ad94b",
+   "id": "4e9c3b0c",
    "metadata": {},
    "source": [
-    "##### Tangente Hiperbólica"
+    "##### Avaliação por Precisão, Recall e F1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba41e342",
+   "id": "18077eb0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neural_network import MLPClassifier\n",
+    "y_pred = mlp.predict(X_teste)\n",
     "\n",
-    "mlp = MLPClassifier(activation=\"tanh\")\n",
-    "mlp.fit(X, y)\n",
-    "predict = mlp.predict(np.array(X_teste).reshape(1,-1))\n",
+    "score_p = precision_score(y_teste, y_pred, average='macro')\n",
+    "score_r = recall_score(y_teste, y_pred, average='macro')\n",
+    "score_f1 = f1_score(y_teste, y_pred, average='macro')\n",
     "\n",
-    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a0cb3d6a",
-   "metadata": {},
-   "source": [
-    "##### ReLU"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "facb7559",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.neural_network import MLPClassifier\n",
-    "\n",
-    "mlp = MLPClassifier(activation=\"relu\")\n",
-    "mlp.fit(X, y)\n",
-    "predict = mlp.predict(np.array(X_teste).reshape(1,-1))\n",
-    "\n",
-    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+    "pd.DataFrame([score_p, score_r, score_f1], index = [\"Precision\", \"Recall\", \"F1\"], columns=[\"Scores\"])"
    ]
   }
  ],
