Commit 12 - Adição do restante dos algoritmos

--- a/REC-PAD-2021_1 Ecoli.ipynb
+++ b/REC-PAD-2021_1 Ecoli.ipynb
@@ -250,7 +250,35 @@
    "metadata": {},
    "source": [
     "# Projeto\n",
-    "##### A seguir é feita uma seleção aleátoria dos dados para cada algorítmo com KFold e em seguida o treinamento e avaliação de cada método. A ordem será a estimação dos parâmetros de (kNN, SVM, MLP), e para cada estimação é selecionada avaliação do melhor parâmetro para cada algorítmo. Para o KNN o melhor numero de visinhos dentre [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15], para o SVM o melhor kernel dentre [\"linear\", \"poly\", \"rbf\", \"sigmoid\"], e por fim para a rede neural a melhor função de ativação [\"identity\", \"logistic\", \"tanh\", \"relu\"] respectivamente.\n",
+    "##### A seguir é feita uma seleção aleátoria dos dados para cada algorítmo com KFold e em seguida o treinamento e avaliação de cada método. A ordem será a estimação dos parâmetros de (kNN, SVM, MLP (Rede Neural), NaiveBayes e Arvore de Decisão), e para cada estimação é selecionada avaliação do melhor parâmetro para cada algorítmo. Para o KNN o melhor numero de visinhos dentre [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15], para o SVM o melhor kernel dentre [\"linear\", \"poly\", \"rbf\", \"sigmoid\"], e por fim para a rede neural a melhor função de ativação [\"identity\", \"logistic\", \"tanh\", \"relu\"] respectivamente. Por fim analinsando os resultados obitidos pelos scores "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b28d6b6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "\n",
+    "def get_scores(algoritmo, X_teste, y_teste, name):\n",
+    "    y_pred = algoritmo.predict(X_teste)\n",
+    "    score_p = precision_score(y_teste, y_pred, average='macro')\n",
+    "    score_r = recall_score(y_teste, y_pred, average='macro')\n",
+    "    score_f1 = f1_score(y_teste, y_pred, average='macro')\n",
+    "\n",
+    "    return pd.DataFrame(\n",
+    "        [score_p, score_r, score_f1], \n",
+    "        index = [\"Precision\", \"Recall\", \"F1\"], \n",
+    "        columns=[name + \"_scores\"])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93ebbcc6",
+   "metadata": {},
+   "source": [
     "### 1. kNN"
    ]
   },
@@ -328,7 +356,7 @@
    "id": "2417fcab",
    "metadata": {},
    "source": [
-    "##### Avaliação por Precisão, Recall e F1"
+    "##### Avaliação por Precisão, Recall e F1 do kNN"
    ]
   },
   {
@@ -338,14 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
-    "y_pred = knn.predict(X_teste)\n",
-    "\n",
-    "score_p = precision_score(y_teste, y_pred, average='macro')\n",
-    "score_r = recall_score(y_teste, y_pred, average='macro')\n",
-    "score_f1 = f1_score(y_teste, y_pred, average='macro')\n",
-    "\n",
-    "pd.DataFrame([score_p, score_r, score_f1], index = [\"Precision\", \"Recall\", \"F1\"], columns=[\"Scores\"])"
+    "knn_result = get_scores(knn, X_teste, y_teste, \"knn\")"
    ]
   },
   {
@@ -421,7 +442,7 @@
    "id": "5075266a",
    "metadata": {},
    "source": [
-    "##### Avaliação por Precisão, Recall e F1"
+    "##### Avaliação por Precisão, Recall e F1 do SVM"
    ]
   },
   {
@@ -431,13 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = svc.predict(X_teste)\n",
-    "\n",
-    "score_p = precision_score(y_teste, y_pred, average='macro')\n",
-    "score_r = recall_score(y_teste, y_pred, average='macro')\n",
-    "score_f1 = f1_score(y_teste, y_pred, average='macro')\n",
-    "\n",
-    "pd.DataFrame([score_p, score_r, score_f1], index = [\"Precision\", \"Recall\", \"F1\"], columns=[\"Scores\"])"
+    "svc_result = get_scores(svc, X_teste, y_teste, \"svc\")"
    ]
   },
   {
@@ -513,7 +528,7 @@
    "id": "4e9c3b0c",
    "metadata": {},
    "source": [
-    "##### Avaliação por Precisão, Recall e F1"
+    "##### Avaliação por Precisão, Recall e F1 do MLP (Rede neural)"
    ]
   },
   {
@@ -523,14 +538,121 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = mlp.predict(X_teste)\n",
-    "\n",
-    "score_p = precision_score(y_teste, y_pred, average='macro')\n",
-    "score_r = recall_score(y_teste, y_pred, average='macro')\n",
-    "score_f1 = f1_score(y_teste, y_pred, average='macro')\n",
-    "\n",
-    "pd.DataFrame([score_p, score_r, score_f1], index = [\"Precision\", \"Recall\", \"F1\"], columns=[\"Scores\"])"
+    "mlp_result = get_scores(mlp, X_teste, y_teste, \"mlp\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c2df1fa",
+   "metadata": {},
+   "source": [
+    "### 4. Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cff7a044",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "gnb = GaussianNB()\n",
+    "gnb.fit(X_treino, y_treino)\n",
+    "gnb_score = gnb.score(X_teste, y_teste)\n",
+    "\n",
+    "gnb_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40b56aa8",
+   "metadata": {},
+   "source": [
+    "##### Avaliação por Precisão, Recall e F1 do Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14098426",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gnb_result = get_scores(gnb, X_teste, y_teste, \"gnb\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccca577d",
+   "metadata": {},
+   "source": [
+    "### 5. Arvore de Decisão"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "099ea438",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "arvore = DecisionTreeClassifier(criterion=\"entropy\")\n",
+    "arvore.fit(X_treino, y_treino)\n",
+    "arvore_score = arvore.score(X_teste, y_teste)\n",
+    "arvore_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aec3f341",
+   "metadata": {},
+   "source": [
+    "##### Avaliação por Precisão, Recall e F1 da Arvore de Decisão"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64867764",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arvore_result = get_scores(arvore, X_teste, y_teste, \"arvore\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90e02d69",
+   "metadata": {},
+   "source": [
+    "### Salvando resultados em arquivo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c526d83d",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "result = knn_result.join(svc_result).join(mlp_result).join(gnb_result).join(arvore_result)\n",
+    "result.to_csv(\"resultados/ecoli.csv\", encoding='utf-8', index=True)\n",
+    "pd.read_csv(\"resultados/ecoli.csv\", index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb807d30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
