--- a/REC-PAD-2021_1.ipynb
+++ b/REC-PAD-2021_1.ipynb
@@ -116,7 +116,6 @@
     "main_result = main_result.append(only_fmeasure(result_tae))\n",
     "\n",
     "main_result.index.names = ['Datasets']\n",
-    "# main_result = main_result.index\n",
     "main_result"
    ]
   },
@@ -145,12 +144,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scipy.stats import rankdata\n",
+    "\n",
     "# função para rankear cada linha de 1 a 5, empates são considerados valores iguais\n",
     "def ranking(row):\n",
-    "    # retirado de https://stackoverflow.com/questions/36193225/numpy-array-rank-all-elements\n",
-    "    _ , id = np.unique(row.values, return_inverse=True)\n",
-    "    out = (id.max() - id + 1).reshape(row.values.shape)\n",
-    "    return out\n",
+    "    \n",
+    "    r_len = len(row.values[0])\n",
+    "    \n",
+    "    u, v = np.unique(row, return_inverse=True)\n",
+    "    temp_r = (np.cumsum(np.bincount(v)))[v]\n",
+    "    rank = []\n",
+    "    \n",
+    "    for e in temp_r:\n",
+    "        rank.append((r_len - e) + 1)\n",
+    "\n",
+    "    return [rank]\n",
     "\n",
     "i_bases = len(main_result.values)\n",
     "\n",
@@ -191,7 +199,7 @@
    "source": [
     "media = []\n",
     "\n",
-    "for col in main_result.columns:\n",
+    "for col in ranked_result.columns:\n",
     "    media.append(np.median(ranked_result[col]))\n",
     "media"
    ]
@@ -241,7 +249,7 @@
     "\n",
     "avranks = media # RANKS MEDIOS\n",
     "\n",
-    "cd = Orange.evaluation.scoring.compute_CD(avranks=avranks, n=14, alpha='0.05', test='nemenyi')\n",
+    "cd = Orange.evaluation.scoring.compute_CD(avranks=avranks, n=10, alpha='0.05', test='nemenyi')\n",
     "cd"
    ]
   },
@@ -254,6 +262,14 @@
    "source": [
     "Orange.evaluation.scoring.graph_ranks(avranks=avranks, names=names, cd=cd, filename=\"nemenyi-test\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d655927",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
