--- a/REC-PAD-2021_1.ipynb
+++ b/REC-PAD-2021_1.ipynb
@@ -56,10 +56,118 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0f13f469",
+   "metadata": {},
+   "source": [
+    "### Filtro de Dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31349312",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import inspect\n",
+    "\n",
+    "main_result = None\n",
+    "\n",
+    "def rename_index(df, index_name):\n",
+    "    callers_local_vars = inspect.currentframe().f_back.f_locals.items()\n",
+    "    l = [k for k, v in callers_local_vars if v is df]\n",
+    "    new_index_name = l[0]\n",
+    "    obj = df.rename(index={index_name: new_index_name})\n",
+    "    return obj\n",
+    "\n",
+    "\n",
+    "def filter_datasets(filter_index):\n",
+    "    abalone = result_abalone.filter(like=filter_index, axis=0)\n",
+    "    balance = result_balance.filter(like=filter_index, axis=0)\n",
+    "    cogumelos = result_cogumelos.filter(like=filter_index, axis=0)\n",
+    "    ecoli = result_ecoli.filter(like=filter_index, axis=0)\n",
+    "    folhas = result_folhas.filter(like=filter_index, axis=0)\n",
+    "    habermans = result_habermans.filter(like=filter_index, axis=0)\n",
+    "    inflammations = result_inflammations.filter(like=filter_index, axis=0)\n",
+    "    jogodavelha = result_jogodavelha.filter(like=filter_index, axis=0)\n",
+    "    sementes = result_sementes.filter(like=filter_index, axis=0)\n",
+    "    tae = result_tae.filter(like=filter_index, axis=0)\n",
+    "    \n",
+    "    main_result = rename_index(abalone, filter_index)\n",
+    "    main_result = main_result.append(rename_index(balance, filter_index))\n",
+    "    main_result = main_result.append(rename_index(cogumelos, filter_index))\n",
+    "    main_result = main_result.append(rename_index(ecoli, filter_index))\n",
+    "    main_result = main_result.append(rename_index(folhas, filter_index))\n",
+    "    main_result = main_result.append(rename_index(habermans, filter_index))\n",
+    "    main_result = main_result.append(rename_index(inflammations, filter_index))\n",
+    "    main_result = main_result.append(rename_index(jogodavelha, filter_index))\n",
+    "    main_result = main_result.append(rename_index(sementes, filter_index))\n",
+    "    main_result = main_result.append(rename_index(tae, filter_index))\n",
+    "    \n",
+    "    main_result.index.names = ['Datasets']\n",
+    "    return main_result\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d7db2d3",
+   "metadata": {},
+   "source": [
+    "##### Filtrando apenas os scores principais"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faf4c445",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_datasets(\"main_score\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bc42314",
+   "metadata": {},
+   "source": [
+    "##### Filtrando apenas o Precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7d99ef1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_datasets(\"Precision\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "249e868f",
+   "metadata": {},
+   "source": [
+    "##### Filtrando apenas o Recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69ffd914",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_datasets(\"scores\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ecadb8a3",
    "metadata": {},
    "source": [
-    "##### Filtrando apenas os dados do F-measure | F1"
+    "##### Filtrando apenas os dados do F-measure | F1 que serão usados na análise"
    ]
   },
   {
@@ -69,54 +177,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fmeasure_index = 2\n",
-    "\n",
-    "result_abalone = result_abalone.iloc[fmeasure_index:, :]\n",
-    "result_balance = result_balance.iloc[fmeasure_index:, :]\n",
-    "result_cogumelos = result_cogumelos.iloc[fmeasure_index:, :]\n",
-    "result_ecoli = result_ecoli.iloc[fmeasure_index:, :]\n",
-    "result_folhas = result_folhas.iloc[fmeasure_index:, :]\n",
-    "result_habermans = result_habermans.iloc[fmeasure_index:, :]\n",
-    "result_inflammations = result_inflammations.iloc[fmeasure_index:, :]\n",
-    "result_jogodavelha = result_jogodavelha.iloc[fmeasure_index:, :]\n",
-    "result_sementes = result_sementes.iloc[fmeasure_index:, :]\n",
-    "result_tae = result_tae.iloc[fmeasure_index:, :]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8fd9e4bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import inspect\n",
-    "\n",
-    "main_result = None\n",
-    "\n",
-    "def only_fmeasure(df):\n",
-    "    fmeasure_index = 2\n",
-    "    callers_local_vars = inspect.currentframe().f_back.f_locals.items()\n",
-    "    l = [k for k, v in callers_local_vars if v is df]\n",
-    "    new_index_name = l[0]\n",
-    "    obj = df.rename(index={'F1': new_index_name})\n",
-    "    return obj\n",
-    "\n",
-    "  \n",
-    "main_result = only_fmeasure(result_abalone)\n",
-    "main_result = main_result.append(only_fmeasure(result_balance))\n",
-    "main_result = main_result.append(only_fmeasure(result_cogumelos))\n",
-    "main_result = main_result.append(only_fmeasure(result_ecoli))\n",
-    "main_result = main_result.append(only_fmeasure(result_folhas))\n",
-    "main_result = main_result.append(only_fmeasure(result_habermans))\n",
-    "main_result = main_result.append(only_fmeasure(result_inflammations))\n",
-    "main_result = main_result.append(only_fmeasure(result_jogodavelha))\n",
-    "main_result = main_result.append(only_fmeasure(result_sementes))\n",
-    "main_result = main_result.append(only_fmeasure(result_tae))\n",
-    "\n",
-    "main_result.index.names = ['Datasets']\n",
-    "main_result"
+    "main_result = filter_datasets(\"F1\")\n",
+    "main_result    "
    ]
   },
   {
@@ -274,9 +336,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rp-2021_1-uast",
+   "display_name": "rp-2021-1",
    "language": "python",
-   "name": "rp-2021_1-uast"
+   "name": "rp-2021-1"
   },
   "language_info": {
    "codemirror_mode": {
@@ -288,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
