--- a/REC-PAD-2021_1 Ecoli.ipynb
+++ b/REC-PAD-2021_1 Ecoli.ipynb
@@ -642,6 +642,16 @@
    "outputs": [],
    "source": [
     "result = knn_result.join(svc_result).join(mlp_result).join(gnb_result).join(arvore_result)\n",
+    "\n",
+    "scores = pd.DataFrame(\n",
+    "    [\n",
+    "        [knn_score, svc_score, mlp_score, gnb_score, arvore_score]\n",
+    "    ], \n",
+    "    index = [\"main_score\"], \n",
+    "    columns=[\"knn_scores\", \"svc_scores\", \"mlp_scores\", \"gnb_scores\", \"arvore_scores\"])\n",
+    "\n",
+    "result = result.append(scores)\n",
+    "\n",
     "result.to_csv(\"resultados/ecoli.csv\", encoding='utf-8', index=True)\n",
     "pd.read_csv(\"resultados/ecoli.csv\", index_col=0)"
    ]
@@ -657,9 +667,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rp-2021_1-uast",
+   "display_name": "rp-2021-1",
    "language": "python",
-   "name": "rp-2021_1-uast"
+   "name": "rp-2021-1"
   },
   "language_info": {
    "codemirror_mode": {
@@ -671,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
